# streamlit-pydantic-form

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_app.py  pyproject.toml  renovate.json  renovate.json5
.github/workflows/: lint.yaml  lint.yml
pages/: 1_📝_Simple_Form.py  2_📝_Nested_Form.py  3_📝_Custom_Widget.py  4_📝_Custom_Widget_2.py  5_📝_List_Form.py  6_📝_Dynamic_Form.py  6_📝_List_Form.py
src/streamlit_pydantic_form/: __init__.py  _exceptions.py  widget.py
streamlit_pydantic_form/: __init__.py  _exceptions.py  _form.py  form.py  widget.py
