[project]
name = "streamlit-pydantic-form"
version = "0.0.6"
description = "Streamlit form component defined by a Pydantic model"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
keywords = ["form", "pydantic", "streamlit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]
dependencies = [
  "pydantic>=2.5.3",
  "streamlit>=1.37.0",
  "typing-extensions>=4.9.0",
]

[project.urls]
Repository = "https://github.com/shunichironomura/streamlit-pydantic-form"

[dependency-groups]
dev = [
  "pre-commit==4.4.0",
  { include-group = "ruff" },
  { include-group = "testing" },
  { include-group = "typing" },
]
ruff = ["ruff==0.14.5"]
testing = ["pytest==9.0.1"]
typing = ["mypy==1.18.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "PLR2004",  # magic numbers
  "S101",  # use of assert
  "G",  # logging format
  "D100",  # missing docstring in public module
  "D101",  # missing docstring in public class
  "D102",  # missing docstring in public method
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public package
  "D105",  # missing docstring in magic method
  "D107",  # missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D213",  # multi-line docstring summary should start at the second line
  "PGH003",  # Use specific rule codes when ignoring type issues
  "RET505",  # Unnecessary `else` after `return` statement
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "TD002",  # Missing author in TODO
  "TD003",  # add link on issue into TODO
  "FIX002",  # Line contains TODO
  "ERA001",  # commented-out-code
  "PLR0913",  # Too many arguments in function definition
]

[tool.ruff.lint.per-file-ignores]
"pages/*.py" = [
  "INP001",  # implicit-namespace-package
]
